welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
	if(aSmile && bSmile) {true}
	if(aSmile && !bSmile) {false}
	if(!aSmile && bSmile) {false}
	if(!aSmile && !bSmile) {true}
}
